[gd_scene load_steps=4 format=3 uid="uid://dydo5qirh645o"]

[ext_resource type="Script" uid="uid://rp7xbtb14ywe" path="res://game_objects/player.gd" id="1_a4hy7"]
[ext_resource type="Texture2D" uid="uid://dv0r8tf6pyd11" path="res://sprite_images/sPlayer.png" id="1_rpe43"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rpe43"]
radius = 16.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_a4hy7")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("1_rpe43")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("CircleShape2D_rpe43")

[node name="SoundEffect" type="AudioStreamPlayer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InvisFrameTimer" type="Timer" parent="."]
one_shot = true

[node name="InvisBlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="InvisFrameTimer" to="." method="_on_invis_frame_timer_timeout"]
[connection signal="timeout" from="InvisBlinkTimer" to="." method="_on_invis_blink_timer_timeout"]
